RESOLVED FIXED164131
[CSS Parser] Miscellaneous bug fixes
https://bugs.webkit.org/show_bug.cgi?id=164131
Summary [CSS Parser] Miscellaneous bug fixes
Dave Hyatt
Reported 2016-10-28 08:59:17 PDT
Miscellaneous bug fixes
Attachments
Patch (13.81 KB, patch)
2016-10-28 09:03 PDT, Dave Hyatt
zalan: review+
Dave Hyatt
Comment 1 2016-10-28 09:03:14 PDT
WebKit Commit Bot
Comment 2 2016-10-28 09:04:38 PDT
Attachment 293164 [details] did not pass style-queue: ERROR: Source/WebCore/css/StyleBuilderConverter.h:344: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 3 2016-10-28 09:26:29 PDT
Landed in r208051 with an ASSERT_UNUSED to fix the release build.
Note You need to log in before you can comment on or make changes to this bug.